--- a/_posts/2017-07-20-VPS-SSR.markdown
+++ b/_posts/2017-07-20-VPS-SSR.markdown
@@ -5,4 +5,4 @@ date: 2017-07-20
 categories: ss
 ---
 
-# [科学上网](https://jasper-1024.github.io/2016/06/26/VPS%E7%A7%91%E5%AD%A6%E4%B8%8A%E7%BD%91%E6%95%99%E7%A8%8B%E7%B3%BB%E5%88%97/)
+#### [科学上网](https://jasper-1024.github.io/2016/06/26/VPS%E7%A7%91%E5%AD%A6%E4%B8%8A%E7%BD%91%E6%95%99%E7%A8%8B%E7%B3%BB%E5%88%97/)
