add post top-10-ruby-on-rails-errors and update past post

--- a/_posts/2018-05-06-ssh-隧道.markdown
+++ b/_posts/2018-05-06-ssh-隧道.markdown
@@ -1,3 +1,11 @@
+---
+layout: post
+title: "ssh nginx"
+date: 2018-05-17
+categories: ssh
+---
+
+
 server {
   listen 80;
   server_name www.xxx.com;
